Use clear json api
